# robodm

./: .gitignore  CONTRIBUTING.md  Containerfile  INGESTION_API.md  MANIFEST.in  Makefile  README.md  convert_libero.py  debug_trajectory.py  ebml_to_lerobot.py  example_codec_usage.py  format.sh  mkdocs.yml  pyproject.toml  pytest.ini  rlds_to_ebml.py  run_tests.py  test_optimized_batch.py
.github/workflows/: lint.yml  main.yml  release.yml
examples/: benchmark.py  data_collection_and_load.py  openx_loader.py  oxe_conversion.py  pytorch_integration_example.py  vla_to_h5.py
fog_x/: __init__.py  dataset.py  feature.py  trajectory.py  trajectory_base.py  trajectory_factory.py  utils.py
fog_x/loader/: __init__.py  base.py  hdf5.py  lerobot.py  rlds.py  vla.py
robodm/: __init__.py  dataset.py  feature.py  resampler.py  time_manager.py  trajectory.py  trajectory_base.py  trajectory_factory.py  utils.py
robodm/backend/: __init__.py  base.py  codec_config.py  codec_interface.py  codec_manager.py  codecs.py  pyav_backend.py
robodm/ingestion/: __init__.py  adapters.py  base.py  factory.py  parallel.py
robodm/loader/: base.py  hdf5.py  lerobot.py  rlds.py  vla.py
robodm/utils/: flatten.py
tests/: README.md  conftest.py  test_benchmark.py  test_codec_system.py  test_fixtures.py  test_loaders.py  test_openx_trajectory.py  test_ray_vla_loader.py  test_shape_codec_logic.py  test_time_manager.py  test_trajectory.py  test_trajectory_enhanced_loading.py  test_trajectory_loader_edge_cases.py  test_trajectory_loader_performance.py
