[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodm"
version = "0.1.0"
description = "An Efficient and Scalable Data Collection and Management Framework For Robotics Learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Kaiyuan Chen", email = "kych@berkeley.edu"},
]
keywords = ["robotics", "data management", "machine learning", "trajectories"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "h5py>=3.7.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.64.0",
    "psutil>=5.9.0",
    "ray[data]>=2.8.0",
]

[project.optional-dependencies]
hf = ["datasets>=2.14.0", "huggingface-hub>=0.16.0"]
rtx = ["tensorflow>=2.13.0", "tensorflow-datasets>=4.9.0"]
aws = ["boto3>=1.26.0", "s3fs>=2023.6.0"]
torch = ["torch>=1.13.0", "torchvision>=0.14.0"]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
]
lerobot = ["lerobot>=0.1.0"]
all = ["robodm[hf,rtx,aws,torch,lerobot]"]

[project.urls]
homepage = "https://github.com/BerkeleyAutomation/robodm/"
repository = "https://github.com/BerkeleyAutomation/robodm/"
documentation = "https://github.com/BerkeleyAutomation/robodm/"
"Bug Tracker" = "https://github.com/BerkeleyAutomation/robodm/issues"

[tool.setuptools.packages.find]
include = ["robodm*"]

[tool.setuptools.package-data]
robodm = ["py.typed"]